Implenmenting a Responsive bakery Website

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 </head>
@@ -23,24 +24,25 @@
           <div class="menu">
             <ul class="nav_items">
               <li class="nav_item">
-                <a href="#" class="nav_link">Home</a>
+                <a href="index.html" class="nav_link">Home</a>
               </li>
               <li class="nav_item">
-                <a href="about.html" class="nav_link">About</a>
+                <a href="about.html" class="nav_link">About us</a>
               </li>
               <li class="nav_item">
-                <a href="" class="nav_link">Menu</a>
+                <a href="menu.html" class="nav_link">Menu</a>
               </li>
               <li class="nav_item">
-                <a href="#" class="nav_link">Special offers</a>
+                <a href="#" class="nav_link">Delivery Opt</a>
               </li>
               <li class="nav_item">
-                <a href="#" class="nav_link">make ur item</a>
+                <a href="#" class="nav_link">Custom cakes</a>
               </li>
             </ul>
           </div>
   
           <div class="log">
+            
             <button class="button" id="form-open">Login</button>
           </div>
 
@@ -53,19 +55,19 @@
           <div class="dropdown">
             <ul>
               <li>
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li>
-                <a href="about.html">About</a>
+                <a href="about.html">About us</a>
               </li>
               <li>
                 <a href="#">Menu</a>
               </li>
               <li>
-                <a href="#">Special offers</a>
+                <a href="#">Delivery Opt</a>
               </li>
               <li>
-                <a href="#">make ur item</a>
+                <a href="#">Custom cakes</a>
               </li>
             </ul>
           </div>
